Added mailto link and styling on email in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,9 +85,11 @@ img {
     background-color: var(--dark-color);
     }
 
-#footer p, #footer i, #footer h3 {
+#footer p, #footer i, #footer h3, #footer a {
     color: #ffffff;
+    text-decoration: none;
 }
+
  
 /* hover transition effects taken from boardwalk-games walkthrough project */
 
